--- a/roles/linux_crio/tasks/main.yml
+++ b/roles/linux_crio/tasks/main.yml
@@ -17,6 +17,7 @@
   yum:
     name: "cri-o"
     state: present
+  notify: Restart and enable crio
 - name: Replace cgroup in cri-o config file
   replace:
     path: /etc/crio/crio.conf
