--- a/roles/k8s_bootstrap/tasks/main.yml
+++ b/roles/k8s_bootstrap/tasks/main.yml
@@ -21,5 +21,5 @@
   register: join_command
 - name: Create file with join command
   lineinfile:
-    path: ./join_command
+    path: join_command
     line: "{{ join_command }}"
