--- a/roles/k8s_prep/tasks/main.yml
+++ b/roles/k8s_prep/tasks/main.yml
@@ -149,3 +149,7 @@
     path: /etc/hosts
     line: "{{ item }}"
   with_items: "{{ k8s_hosts }}"
+- name: generate key pairs
+  openssh_keypair:
+    state: present
+    path: /root/.ssh/
